<resources>
    <string name="app_name">Hans</string>
    <string name="Next_Page">Continue</string>
    <string name="Student_login">Login as Student</string>
    <string name="Teacher_login">Login as Teacher</string>
    <string name="Admin_login">Login as Admin</string>
    <string name="Science_tt">Science Time Table</string>
    <string name="Arts_com_tt">Arts and Commerce Time Table</string>
    <string name="ge_tt">GE Time Table</string>
    <string name="fac_sci">Faculty Science Time Table</string>
    <string name="fac_art_comm">Faculty Arts and Commerce Time Table</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_home_page">Home_page</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="title_activity_teacher_profile">TeacherProfile</string>
    <string name="email"><a href="#">Varda@gmail.com</a></string>
</resources>