<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".time_table"
    android:background="@drawable/red_gradient">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_image"
        android:src="@drawable/college_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/science_tt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:text="@string/Science_tt"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@id/logo_image"
        android:layout_marginTop="20dp"/>
    <View
        android:id="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/science_tt"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="#efc600"
        android:layout_marginTop="20dp"
        android:layout_centerVertical="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/arts_com_tt"
        android:layout_below="@+id/view1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:text="@string/Arts_com_tt"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="30dp"/>
    <View
        android:id="@+id/view2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/arts_com_tt"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="#efc600"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ge_tt"
        android:layout_below="@+id/view2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:text="@string/ge_tt"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="30dp"/>
    <View
        android:id="@+id/view3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ge_tt"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="#efc600"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fac_sci_tt"
        android:layout_below="@+id/view3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:text="@string/fac_sci"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="30dp"/>
    <View
        android:id="@+id/view4"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fac_sci_tt"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="#efc600"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fac_art_comm_tt"
        android:layout_below="@+id/view4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:text="@string/fac_art_comm"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="30dp"/>
    <View
        android:id="@+id/view5"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fac_art_comm_tt"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="#efc600"
        android:layout_marginTop="10dp"
        android:layout_centerVertical="true"/>


</RelativeLayout>