<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/red_gradient">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_image"
        android:src="@drawable/college_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/student_login"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:text="@string/Student_login"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="200dp"/>
    <View
        android:id="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/student_login"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="#efc600"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/teacher_login"
        android:layout_below="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:text="@string/Teacher_login"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="50dp"/>
    <View
        android:id="@+id/view2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/teacher_login"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="#efc600"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_login"
        android:layout_below="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:backgroundTint="@color/yellow"
        android:layout_centerHorizontal="true"
        android:text="@string/Admin_login"
        app:cornerRadius="10dp"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="50dp"/>
    <View
        android:id="@+id/view3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/admin_login"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:background="#efc600"
        android:layout_marginTop="30dp"
        android:layout_centerVertical="true"/>


</RelativeLayout>